2007-05-25  Bruno coudoin  <bruno.coudoin@free.fr>

	Added the libccc library by Sven Herzberg.
	the original code is imported in gcompris/vendor/libccc/0.0.4/
	the sven repository is in http://www.blaubeermuffin.de/svn/libccc/trunk

	Included the patches from Yves to make the python demo work and much more.

	* configure.in:
	* src/Makefile.am:
	* src/libccc/Makefile.am:
	* src/libccc/ccc/Makefile.am:
	* src/libccc/ccc/Makefile.in:
	* src/libccc/ccc/cc-brush-color.c: (cbc_dispose), (cbc_apply),
	(cc_brush_color_class_init), (brush_color_implement_brush):
	* src/libccc/ccc/cc-brush-color.h:
	* src/libccc/ccc/cc-brush.c: (cc_brush_apply):
	* src/libccc/ccc/cc-brush.h:
	* src/libccc/ccc/cc-cairo.c:
	* src/libccc/ccc/cc-cairo.h:
	* src/libccc/ccc/cc-camera.c: (camera_set_zoom), (camera_render),
	(camera_init_matrix), (camera_world_to_window),
	(camera_world_to_window_distance), (camera_item_added),
	(camera_item_removed), (camera_item_dirty),
	(camera_notify_all_bounds), (camera_implement_item_view):
	* src/libccc/ccc/cc-caret.c: (cc_caret_new),
	(cc_caret_set_position), (cc_caret_init), (cc_caret_class_init):
	* src/libccc/ccc/cc-caret.h:
	* src/libccc/ccc/cc-circle.c: (cc_circle_set_radius),
	(cc_distance), (cc_update_bounds):
	* src/libccc/ccc/cc-color-hsv.c: (color_hsv_apply),
	(cc_color_hsv_class_init):
	* src/libccc/ccc/cc-color-rgb.c: (color_rgb_apply),
	(cc_color_rgb_class_init):
	* src/libccc/ccc/cc-color.c: (cc_color_apply), (cc_color_stop),
	(color_apply), (cc_color_class_init), (color_apply_brush),
	(color_implement_brush):
	* src/libccc/ccc/cc-color.h:
	* src/libccc/ccc/cc-d-rect.c: (cc_d_rect_copy):
	* src/libccc/ccc/cc-d-rect.h:
	* src/libccc/ccc/cc-enumerations.c.in:
	* src/libccc/ccc/cc-gradient.c: (gradient_compare_stops),
	(cc_gradient_add_stop), (cc_gradient_create_pattern),
	(cc_gradient_init), (gradient_apply), (cc_gradient_class_init),
	(gradient_implement_brush):
	* src/libccc/ccc/cc-gradient.h: