@@ -56,7 +56,8 @@ INCLUDES = \
         $(sqlite_cflags) \
 	$(GNET_CFLAGS) \
 	$(cairo_cflags) \
-	$(NSBUNDLE_CPPFLAGS)
+	$(NSBUNDLE_CPPFLAGS) \
+	-I$(top_srcdir)/src/libccc/
 
 gcompris_SOURCES = \
 	$(cairo_c) \
@@ -122,7 +123,8 @@ gcompris_SOURCES = \
 gcompris_LDFLAGS = \
 	-export-dynamic $(cairo_ldflags) \
 	$(top_builddir)/src/libgnomecanvas/libgnomecanvas-2.a \
-	$(top_builddir)/src/libart_lgpl/libart_lgpl_2.a
+	$(top_builddir)/src/libart_lgpl/libart_lgpl_2.a \
+	$(top_builddir)/src/libccc/ccc/.libs/libccc-0.1.a
 
 
 gcompris_LDADD = \
